fix to the progress bar to be aligned correctly

--- a/HelpMyStreetFE/HelpMyStreetFE/src/sass/components/_progress-bar.scss
+++ b/HelpMyStreetFE/HelpMyStreetFE/src/sass/components/_progress-bar.scss
@@ -90,7 +90,7 @@
     display: block;
     width: 100%;
     position: absolute;
-    bottom: 41px;
+    bottom: 38px;
     left: -50%;
     z-index: 2;
     border-width: 8px;
@@ -140,7 +140,7 @@
     border: 4px solid $orange;
     position: absolute;
     left: calc(50% - 6px);
-    bottom: 34px;
+    bottom: 31px;
     z-index: 3;
     transition: all .2s ease-in-out;
 }
